# AdventOfCode

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
Day1/: CMakeLists.txt  io.cpp  puzzle.cpp
Day1/include/: puzzle1.h
Day12/: CMakeLists.txt  io.cpp  path.cpp  puzzle.cpp
Day12/include/: puzzle12.h
Day12_bf/: CMakeLists.txt  io.cpp  puzzle.cpp
Day12_bf/include/: puzzle12_bf.h
Day17/: CMakeLists.txt  direction.cpp  field.cpp  io.cpp  map.cpp  path.cpp  puzzle.cpp
Day17/include/: direction.h  puzzle17.h
Day2/: CMakeLists.txt  io.cpp  puzzle.cpp
Day2/include/: puzzle2.h
Day4/: CMakeLists.txt  io.cpp  pileProcessor.cpp  puzzle.cpp
Day4/include/: puzzle4.h
test/: CMakeLists.txt  testPuzzles.cpp  testUtil.cpp
utils/: CMakeLists.txt  io.cpp  process_input.cpp
utils/include/: io.h  process_input.h  puzzle.h
